[feat] Working implementation of Dirichlet sampling